# mtu-webrtc-bug

./: .gitignore  README.md  answerer.html  offerer.html  repro.sh  rust-offerer.html  server.py  shared.js
blackhole-relay/: Cargo.toml
blackhole-relay/src/: main.rs
diagnostics/: README.md  tailscale-v6-blackhole.pcap  who-loses-the-packets.md
headless/: package.json  run-answerer.js
rust-sender/: Cargo.toml
rust-sender/src/: main.rs
