[package]
name = "rust-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
rand = "0.8.6"
reqwest = { version = "0.12.28", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync", "time"] }
webrtc = "0.13.0"
